# Zombie-Curtains-3

./: .project  Cargo.toml  LICENSE  README.md
assets/rons/: player.ron  tile.ron  world_sprites.ron
assets/sprites/: logo.ron
assets/sprites/entities/: e_shadow.ron
assets/sprites/player/: player.ron
assets/textures/: world_sprites.ron
config/: bindings.ron  display.ron
music_src_assets/: README.md  ZombieCurtains_Intro.mmpz  ZombieCurtains_Intro.mmpz.bak
resources/: bindings.ron
resources/textures/: grass.ron
src/: main.rs  miscfunc.rs  render_graph.rs  renderer_graph.rs  splashscreen.rs  zombie_curtains.rs
src/editor_systems/: editor_bundle.rs  mod.rs  move_system.rs  zoom_system.rs
src/particles/: mod.rs  particle.rs  particles_bundle.rs
src/systems/: camera_movement.rs  camera_movement_system.rs  chunk_generator_system.rs  fps_system.rs  generator_source.rs  generator_source_system.rs  mod.rs  systems_bundle.rs
src/systems/entities/: animator.rs  mod.rs  player_movement.rs  player_movement_system.rs  shadows.rs  sprite_flipper.rs
src/wire/: dot_grid_system.rs  editor_state.rs  mod.rs  move_system.rs  vel_slide.rs  wire_editor_bundle.rs  zoom_system.rs
src/wire/particles/: emitter.rs  mod.rs  particle.rs  particles_bundle.rs
src/wire/ui/: core.rs  mod.rs
